--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,7 @@
 
 
-#'@export solution
-#'@export solutionFilter
-#'@export sur.children
-#'@import rapportools
-#'@import tidyverse
+export(solution)
+export(solutionFilter)
+export(sur.children)
+import(rapportools)
+import(tidyverse)
